@@ -20,23 +20,23 @@ def test_tabulate_wrapper():
     headers = ['letters', 'number']
     output = tabulate_adapter.adapter(iter(data), headers, table_format='psql')
     assert "\n".join(output) == dedent('''\
-        +-----------+----------+
-        | letters   |   number |
-        |-----------+----------|
-        | abc       |        1 |
-        | d         |      456 |
-        +-----------+----------+''')
+        +---------+--------+
+        | letters | number |
+        |---------+--------|
+        | abc     |      1 |
+        | d       |    456 |
+        +---------+--------+''')
 
     data = [['{1,2,3}', '{{1,2},{3,4}}', '{å,魚,текст}'], ['{}', '<null>', '{<null>}']]
     headers = ['bigint_array', 'nested_numeric_array', '配列']
     output = tabulate_adapter.adapter(iter(data), headers, table_format='psql')
     assert "\n".join(output) == dedent('''\
-        +----------------+------------------------+--------------+
-        | bigint_array   | nested_numeric_array   | 配列         |
-        |----------------+------------------------+--------------|
-        | {1,2,3}        | {{1,2},{3,4}}          | {å,魚,текст} |
-        | {}             | <null>                 | {<null>}     |
-        +----------------+------------------------+--------------+''')
+        +--------------+----------------------+--------------+
+        | bigint_array | nested_numeric_array | 配列         |
+        |--------------+----------------------+--------------|
+        | {1,2,3}      | {{1,2},{3,4}}        | {å,魚,текст} |
+        | {}           | <null>               | {<null>}     |
+        +--------------+----------------------+--------------+''')
 
 
 def test_markup_format():
@@ -71,26 +71,17 @@ def test_style_output_table():
 
     style_output_table(data, headers, style=CliStyle)
     output = tabulate_adapter.adapter(iter(data), headers, table_format='psql')
+    PLUS = '\x1b[91m+\x1b[39m'
+    MINUS = '\x1b[91m-\x1b[39m'
+    PIPE = '\x1b[91m|\x1b[39m'
 
-    assert "\n".join(output) == dedent('''\
-        \x1b[91m+\x1b[39m''' + (
-          ('\x1b[91m-\x1b[39m' * 10) +
-          '\x1b[91m+\x1b[39m' +
-          ('\x1b[91m-\x1b[39m' * 6)) +
-        '''\x1b[91m+\x1b[39m
-        \x1b[91m|\x1b[39m h1       \x1b[91m|\x1b[39m''' +
-        ''' h2   \x1b[91m|\x1b[39m
-        ''' + '\x1b[91m|\x1b[39m' + (
-          ('\x1b[91m-\x1b[39m' * 10) +
-          '\x1b[91m+\x1b[39m' +
-          ('\x1b[91m-\x1b[39m' * 6)) +
-        '''\x1b[91m|\x1b[39m
-        \x1b[91m|\x1b[39m 观音     \x1b[91m|\x1b[39m''' +
-        ''' 2    \x1b[91m|\x1b[39m
-        \x1b[91m|\x1b[39m Ποσειδῶν \x1b[91m|\x1b[39m''' +
-        ''' b    \x1b[91m|\x1b[39m
-        ''' + '\x1b[91m+\x1b[39m' + (
-          ('\x1b[91m-\x1b[39m' * 10) +
-          '\x1b[91m+\x1b[39m' +
-          ('\x1b[91m-\x1b[39m' * 6)) +
-        '\x1b[91m+\x1b[39m')
+    expected = dedent('''\
+        +----------+----+
+        | h1       | h2 |
+        |----------+----|
+        | 观音     | 2  |
+        | Ποσειδῶν | b  |
+        +----------+----+'''
+    ).replace('+', PLUS).replace('-', MINUS).replace('|', PIPE)
+
+    assert "\n".join(output) == expected
