@@ -1,6 +1,11 @@
 Changelog
 =========
 
+TBD
+---
+
+* Remove dependency on terminaltables
+
 Version 2.0.1
 -------------
 
